# thorvg.example

./: CODEOWNERS  CONTRIBUTORS.md  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  build_test.yml
res/lottie/extensions/: spin.json
src/: Accessor.cpp  Animation.cpp  Blending.cpp  BoundingBox.cpp  Capi.cpp  Clipping.cpp  CustomTransform.cpp  DataLoad.cpp  DirectUpdate.cpp  Duplicate.cpp  EffectDropShadow.cpp  Example.h  FillRule.cpp  FillSpread.cpp  GifSaver.cpp  GradientMasking.cpp  GradientStroke.cpp  GradientTransform.cpp  ImageRotation.cpp  ImageScaling.cpp  Intersects.cpp  LinearGradient.cpp  Lottie.cpp  LottieExpressions.cpp  LottieExtension.cpp  LottieInteraction.cpp  LottieTweening.cpp  LumaMasking.cpp  Masking.cpp  MaskingMethods.cpp  MultiCanvas.cpp  Opacity.cpp  Particles.cpp  Path.cpp  PictureJpg.cpp  PicturePng.cpp  PictureRaw.cpp  PictureSvg.cpp  PictureWebp.cpp  RadialGradient.cpp  (+22 more)
